<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Crossbones Software
     This code has been modified.  Portions copyright (C) 2013, Dirty Unicorns Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            android:orientation="vertical" 
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:src="@drawable/googleplus"                
                android:onClick="launchGoogleplus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:textSize="20sp"
                android:text="@string/googleplus" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:src="@drawable/twitter"                
                android:onClick="launchTwitter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:textSize="20sp"
                android:text="@string/twitter" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:src="@drawable/github"                
                android:onClick="launchGithub" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:textSize="20sp"
                android:text="@string/github" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
